# line-editor

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: linux-ci.yml  windows-ci.yml
include/: active_zone.h  command_executor.h  command_parser.h  editor.h  encoding_utils.h  error.h  file_manager.h  line.h  line_block.h
src/: active_zone.cpp  command_executor.cpp  command_parser.cpp  editor.cpp  encoding_utils.cpp  error.cpp  file_manager.cpp  line.cpp  line_block.cpp  main.cpp
test/: simple_test.cpp  test_active_zone.cpp  test_boundary_cases.cpp  test_command_executor.cpp  test_command_parser.cpp  test_editor_integration.cpp  test_framework.h  test_line.cpp  test_line_block.cpp  test_line_only.cpp
